--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,11 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>13</source>
+                    <target>13</target>
+                    <excludes>
+                        <exclude>target/**</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
