--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.fpl-wrapper</groupId>
     <artifactId>fpl-wrapper</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0</version>
     <properties>
-        <dropwizard.version>1.3.15</dropwizard.version>
+        <dropwizard.version>2.0.16</dropwizard.version>
     </properties>
     <dependencies>
         <dependency>
@@ -58,10 +58,11 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <release>11</release>
                     <excludes>
                         <exclude>target/**</exclude>
                     </excludes>
@@ -93,8 +94,10 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>dropwizard.FPLWrapperApplication</mainClass>
                                 </transformer>
                             </transformers>
