--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.fpl-wrapper</groupId>
     <artifactId>fpl-wrapper</artifactId>
-    <version>0.2.0</version>
+    <version>1.0.0</version>
     <properties>
         <dropwizard.version>2.0.16</dropwizard.version>
     </properties>
@@ -18,6 +18,11 @@
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-testing</artifactId>
+            <version>${dropwizard.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-jdbi3</artifactId>
             <version>${dropwizard.version}</version>
         </dependency>
         <dependency>
@@ -53,6 +58,11 @@
             <artifactId>assertj-core</artifactId>
             <version>3.18.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.18</version>
         </dependency>
     </dependencies>
     <build>
@@ -98,7 +108,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>dropwizard.FPLWrapperApplication</mainClass>
+                                    <mainClass>FPLWrapperApplication</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
