--- a/server-config.yml
+++ b/server-config.yml
@@ -18,7 +18,7 @@ database:
   password: # insert password
 
   # the JDBC URL
-  url: jdbc:postgresql:postgres
+  url: #jdbc:postgresql://172.17.0.2/postgres
 
   # any properties specific to your JDBC driver:
   properties:
