--- a/server-config.yml
+++ b/server-config.yml
@@ -7,6 +7,7 @@ swagger:
   description: A user-friendly API for the Fantasy Premier League online game.
   contact: Yll Kelani
   contactEmail: yll.kelani@hotmail.co.uk
+  schemes: [https, http]
 database:
   # the name of your JDBC driver
   driverClass: org.postgresql.Driver
@@ -18,7 +19,7 @@ database:
   password: ${FPL_DB_PASS}
 
   # the JDBC URL
-  url: jdbc:postgresql://172.17.0.2/postgres
+  url: jdbc:postgresql://localhost/postgres
 
   # any properties specific to your JDBC driver:
   properties:
